# .dotfiles

./: .gitignore  CMakeLists.txt  README.md  TODO.md  bash.aliases  bash.ansi  bash.functions_commands  bash.functions_git  bash.functions_pathvar  bash.functions_prompt  bash.functions_util  bash_logout  bash_profile  bashrc  brew_installs.sh  install.sh  install_dotfiles.sh  main.cpp
archive/: _bash_profile_orca  bash.functions_kubernetes  ingestdata.py  se
archive/Exemplars/: liquidpromptrc
archive/Exemplars/Exemplars/: git-last.sh
config/: ccache.conf  clang-tidy  dircolors  gitconfig  inputrc  vimrc
